<resources>
    <string name="app_name">Tasaciones</string>
    <string name="activity_title">Tasación e impuesto</string>
    <string name="details_gd_label">g/d:</string>
    <string name="details_cvf_label">cvf:</string>
    <string name="details_cv_label">cv:</string>
    <string name="details_pkw_label">pkW:</string>
    <string name="details_period_label">periodo comercial:</string>
    <string name="details_cc_label">cc:</string>
    <string name="details_cylinders_label">Nº cilindros:</string>

    <string name="vehicle_value_label">%1$s€</string>
    <string name="vehicle_percent_label">%</string>
    <string name="vehicle_value_details_description">El valor mínimo del vehiculo se calcula teniendo en cuenta las tablas de hacienda y aplicando la depreciación segun el año de matriculación del vehiculo. \nEl resultado del impuesto se obtiene aplicando el tipo impositivo del 4% establecido por la Comunidad de Madrid al valor mínimo del vehiculo.</string>
    <string name="vehicle_value_details_depreciation">Valor aplicando la depreciación para vehiculo del año %1$s:</string>
    <string name="vehicle_value_details_base_value">Valoración de hacienda: </string>
    <string name="vehicle_value_details_increment">Resultado del impuesto: </string>

    <string name="search_filter_brand_text">Marca</string>
    <string name="search_filter_model_text">Modelo</string>
    <string name="search_filter_year_text">Año</string>
    <string name="search_filter_gd_text">g/d</string>
    <string name="search_filter_cvf_text">cvf</string>
    <string name="search_filter_cv_text">cv</string>
    <string name="search_filter_pkw_text">pkW</string>
    <string name="search_filter_cylinders_text">Nº cilindros</string>
    <string name="search_filter_cc_text">cc</string>

    <string name="search_action_button">Buscar</string>

    <string name="brand_hint_value">Opel</string>
    <string name="model_hint_value">Corsa</string>
    <string name="commercial_year_hint_value">2010</string>

    <string name="about_activity_title">Sobre Tasaciones</string>

    <string name="info_screen_description_text">Esta app tiene un uso meramente informativo, no nos hacemos responsables de su uso.\nLos datos proviene del BOE publicado el lunes 24 de diciembre del 2018.\nEl tipo impositivo es el establecido por la Comunidad de Madrid conforme con el model 620.\nEl modelo 620 debe liquidarse por el precio de compra excepto si este es inferior a la valoración mínima establecida por hacienda, en cuyo caso se debe liquidar por el valor mínimo.\nSi tiene alguna duda sobre el impuesto o quiere realizar el cambio de titularidad de un vehículo no dude en ponerse en contacto con la Gestoría Afines donde se le podrá asesorar sobre todo el proceso.
    </string>

    <string name="gestoria_afines_phone_text">Gestoría Afines: %1$s</string>
    <string name="phone_uri">tel:%1$s</string>
    <string name="info_screen_title_text">Proceso de tasación e impuesto aplicado.</string>
    <plurals name="search_result_count_description">
        <item quantity="one">%1$s vehículo encontrados</item>
        <item quantity="other">%1$s vehículos encontrados</item>
    </plurals>
</resources>
