<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="item"
            type="es.developer.achambi.tsproject.VehiclePresentation">
        </variable>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="8dp">

        <TextView
            android:id="@+id/details_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{item.brand}"
            android:textColor="@color/text_primary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Opel" />

        <TextView
            android:id="@+id/details_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@{item.model}"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_name_text"
            tools:text="Insignia 2.0CDTI Cosmo Aut. 4p/5p" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/details_gd_label"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/details_gd_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/details_gd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.gd}"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            tools:text="diesel" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/details_cvf_label"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/details_cvf_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_gd_text"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/details_cvf_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{item.cvf}"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toStartOf="@+id/textView13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            tools:text="12,96" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/details_cv_label"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/details_cv_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_cvf_text"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/details_cv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{item.cv}"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            tools:text="110" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/details_pkw_label"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/details_pkw_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_cv_text"
            app:layout_constraintTop_toBottomOf="@+id/details_period_text" />

        <TextView
            android:id="@+id/details_pkw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{item.pkW}"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toStartOf="@+id/details_cc_tag"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15"
            tools:text="90" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/details_period_label"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/details_period_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_type_text" />

        <TextView
            android:id="@+id/cylinders_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/search_filter_cylinders_text"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/cylinders_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_period_text"
            app:layout_constraintTop_toBottomOf="@+id/details_type_text" />

        <TextView
            android:id="@+id/details_period_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{item.period}"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toTopOf="@+id/textView17"
            tools:text="1990-1998" />

        <TextView
            android:id="@+id/cylinders_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{item.cylinders}"
            android:textColor="@color/text_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cylinders_tag"
            app:layout_constraintTop_toTopOf="@+id/textView17"
            tools:text="4" />

        <TextView
            android:id="@+id/details_cc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/details_cc_label"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/details_cc_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_pkw_text"
            app:layout_constraintTop_toBottomOf="@+id/details_period_text"
            tools:text="cc" />

        <TextView
            android:id="@+id/details_cc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{item.cc}"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="@+id/details_cc_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_cc_tag"
            app:layout_constraintTop_toTopOf="@+id/details_cc_tag"
            tools:text="4" />

    </android.support.constraint.ConstraintLayout>
</layout>